// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders different modal sections 1`] = `
.c0 {
  font-family: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: 300;
  line-height: calc(1em + 0.5rem);
  margin-bottom: 0.45em;
  margin-top: 0;
  color: inherit;
  margin-bottom: 1rem;
  font-size: 25.92px;
}

.c0 small {
  line-height: 1;
}

.c0 small {
  font-size: 75%;
}

.c1 {
  margin: 0;
}

@media (min-width: 768px) {
  .c0 {
    margin-bottom: 1rem;
    font-size: 25.92px;
  }
}

@media (min-width: 480px) {

}

@media (min-width: 768px) {

}

@media (min-width: 900px) {

}

@media (min-width: 480px) {

}

@media (min-width: 768px) {

}

@media (min-width: 900px) {

}

@media (min-width: 768px) {

}

<h4
  class="c0 c1"
  id="renders-different-modal-sections-3"
>
  Header
</h4>
`;

exports[`renders different modal sections 2`] = `
.c0 {
  color: #444;
  padding: 15px;
}

@media (min-width: 768px) {

}

@media (min-width: 480px) {

}

@media (min-width: 768px) {

}

@media (min-width: 900px) {

}

@media (min-width: 480px) {
  .small .c0 {
    margin-top: unset;
  }
}

@media (min-width: 768px) {
  .medium .c0 {
    margin-top: unset;
  }
}

@media (min-width: 900px) {
  .large .c0 {
    margin-top: unset;
  }
}

@media (min-width: 768px) {

}

<div
  class="c0"
>
  Body
</div>
`;

exports[`renders different modal sections 3`] = `
.c0 {
  align-items: baseline;
  display: flex;
  padding: 15px 15px 55px;
  text-align: right;
}

.c0 button {
  width: auto;
}

@media (min-width: 768px) {

}

@media (min-width: 480px) {

}

@media (min-width: 768px) {

}

@media (min-width: 900px) {

}

@media (min-width: 480px) {

}

@media (min-width: 768px) {

}

@media (min-width: 900px) {

}

@media (min-width: 768px) {
  .c0 {
    padding: 15px 15px 19px;
  }
}

<div
  class="c0"
>
  Footer
</div>
`;
